# identity-levels-inchi

./: -  .gitignore  Naming_Example.xlsx  README.md  conda_env.yml  file1.txt  file2.txt  pyproject.toml  requirements.txt  result.json  results.json  test_file1.mgf  test_file2.mgf  test_protonation_file2.mgf  unification_log.json  unified.mgf
backend/: app.py
backend/inchi/: cli.py  compare.py  config_loader.py  determine_levels_id.py  lipid_analysis.py  lipid_comparator.py  lipid_structure_detector.py  lipid_tail_extraction.py  mgf_parser.py
backend/lipid/: lipid_comparator.py
backend/output/: result1.json
backend/routes/: generation_3d_routes.py  inchi_comparison_routes.py
backend/tests/: test_smarts.py
configs/: default_config.json  results.json
dist_new/: inchi_identity-0.2.1-py3-none-any.whl
files_examples/: result1.json  result_cross.json  result_cross_true.json  result_pairwise.json  result_pairwise_smiles.json  test_simple1.mgf  unified.mgf  unified_log_salts.json  unified_log_smiles_charges.json
files_examples/input/: file1.txt  file2.txt  test_protonation_file1.mgf  test_simple2.mgf
files_examples/output/: result1.json  result1_isomer_config.json  result2.json  result_cross.json  result_cross_equal.json  result_pairwise.json  result_pairwise_smiles.json  unified_log_protonation.json
frontend/: index.html
frontend/css/: mgf.css  style.css
frontend/js/: compare.js  files.js  mgf_files.js  scripts.js  ui.js  visualize.js
frontend/pages/: compare.html  files.html  mgf_files.html  mix_criteria.html  text_files.html
src/: testing.py
src/backend/: app.py
src/backend/cli/: cli.py
src/backend/inchi/: compare.py  config_loader.py  determine_levels_id.py  inchi_layers_enum.py  main.py  mgf_parser.py  smiles_pattern.py
src/backend/input/: input_inchi.py
src/backend/lipid/: lipid_analysis.py  lipid_pattern_generator.py  (+2 more)
src/inchi/: cli.py  compare.py  config_loader.py  determine_levels_id.py  inchi_layers_enum.py  inchi_parser.py  lipid_analysis.py  main.py
src/input/: input_inchi.py
tests/: test_determine_levels_id.py  test_extract_methods.py  test_identity.py  test_identity_smiles.py  test_smarts.py
(+18 files in other folders)
