[project]
name = "inchi-identity"
version = "0.1.1"
description = "Hierarchical molecular identity comparison framework for untargeted metabolomics"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Alejandra O'Shea", email = "alejandraosheafdez@gmail.com" }
]

dependencies = [
    "numpy",
    "pandas",
    "requests",
    "openpyxl",
    "python-dotenv",
]

[project.scripts]
inchi = "backend.cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]